Version 1.14 - 2017-11-09
* Add eligibility rejection wizard

Version 1.12 - 2017-04-28
* FEA#0000 Possibility to force validation or rejection of eligibility

Version 1.10 - 2016-11-02
* FEA#0000 Verify eligibility when scheduling an indemnification

Version 1.8 - 2016-07-06
* FEA#0000 Add accept/refuse benefit button on delivered service
* FEA#0000 Module creation