@@ -1,3 +1,5 @@
+* FEA#7782 Ajout du refus automatique d'un service depuis les règles d'éligibilité
+
 Version 1.14 - 2017-11-09
 * Ajout d'un assistant de refus de l'éligibilité
 
