@@ -1,3 +1,5 @@
+* FEA#7782 Allow automatic refusal of a service from eligibility rules
+
 Version 1.14 - 2017-11-09
 * Add eligibility rejection wizard
 
